add stommel model

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -291,3 +291,56 @@ title = {{The effect of solar radiation variations on the climate of the Earth}}
 volume = {21},
 year = {1969}
 }
+
+@ARTICLE{Lohmann2021,
+  title     = "Abrupt climate change as a rate-dependent cascading tipping
+               point",
+  author    = "Lohmann, Johannes and Castellana, Daniele and Ditlevsen, Peter D
+               and Dijkstra, Henk A",
+  abstract  = "Abstract. We propose a conceptual model comprising a cascade of
+               tipping points as a mechanism for past abrupt climate changes.
+               In the model, changes in a control parameter, which could for
+               instance be related to changes in the atmospheric circulation,
+               induce sequential tipping of sea ice cover and the ocean's
+               meridional overturning circulation. The ocean component,
+               represented by the well-known Stommel box model, is shown to
+               display so-called rate-induced tipping. Here, an abrupt
+               resurgence of the overturning circulation is induced before a
+               bifurcation point is reached due to the fast rate of change of
+               the sea ice. Because of the multi-scale nature of the climate
+               system, this type of tipping cascade may also be a risk
+               concerning future global warming. The relatively short
+               timescales involved make it challenging to detect these tipping
+               points from observations. However, with our conceptual model we
+               find that there can be a significant delay in the tipping
+               because the system is attracted by the stable manifold of a
+               saddle during the rate-induced transition before escaping
+               towards the undesired state. This opens up the possibility for
+               an early warning of the impending abrupt transition via
+               detection of the changing linear stability in the vicinity of
+               the saddle. To do so, we propose estimating the Jacobian from
+               the noisy time series. This is shown to be a useful generic
+               precursor to detect rate-induced tipping.",
+  journal   = "Earth Syst. Dyn.",
+  publisher = "Copernicus GmbH",
+  volume    =  12,
+  number    =  3,
+  pages     = "819--835",
+  month     =  jul,
+  year      =  2021,
+  copyright = "https://creativecommons.org/licenses/by/4.0/",
+  language  = "en"
+}
+
+@ARTICLE{Stommel1961,
+  title     = "Thermohaline convection with two stable regimes of flow",
+  author    = "Stommel, Henry",
+  journal   = "Tellus",
+  publisher = "Stockholm University Press",
+  volume    =  13,
+  number    =  2,
+  pages     = "224--230",
+  month     =  may,
+  year      =  1961,
+  language  = "en"
+}
