textbook bib entry

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -377,3 +377,14 @@ url = {http://dx.doi.org/10.1007/s00382-017-3974-5},
 volume = {51},
 year = {2018}
 }
+
+@BOOK{Datseris2022,
+  title     = "Nonlinear dynamics",
+  author    = "Datseris, George and Parlitz, Ulrich",
+  publisher = "Springer Nature",
+  series    = "Undergraduate Lecture Notes in Physics",
+  edition   =  1,
+  month     =  mar,
+  year      =  2022,
+  address   = "Cham, Switzerland"
+}
