Finish up for release (#3)
* add stommel model

* better name for central function

* hypermassive update

* make examples

* port here autoprogressrpot

* add water vapor processes

* add hystersis snowball and stommel model examples

* textbook bib entry

* test a bunch of processes

* test even more processes!

* more tests, possibility of submodule

* make variables not exported by default

* add future plans and funding to readme

* finish index of docs

* reference good scientific code

* reference the dostring

* fix compile

* import gblobal vars in tests

* correct keyword in documenter

* also ignore missing docs

* correct stommel example

* fix docbuilds

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -291,3 +291,100 @@ title = {{The effect of solar radiation variations on the climate of the Earth}}
 volume = {21},
 year = {1969}
 }
+
+@ARTICLE{Lohmann2021,
+  title     = "Abrupt climate change as a rate-dependent cascading tipping
+               point",
+  author    = "Lohmann, Johannes and Castellana, Daniele and Ditlevsen, Peter D
+               and Dijkstra, Henk A",
+  abstract  = "Abstract. We propose a conceptual model comprising a cascade of
+               tipping points as a mechanism for past abrupt climate changes.
+               In the model, changes in a control parameter, which could for
+               instance be related to changes in the atmospheric circulation,
+               induce sequential tipping of sea ice cover and the ocean's
+               meridional overturning circulation. The ocean component,
+               represented by the well-known Stommel box model, is shown to
+               display so-called rate-induced tipping. Here, an abrupt
+               resurgence of the overturning circulation is induced before a
+               bifurcation point is reached due to the fast rate of change of
+               the sea ice. Because of the multi-scale nature of the climate
+               system, this type of tipping cascade may also be a risk
+               concerning future global warming. The relatively short
+               timescales involved make it challenging to detect these tipping
+               points from observations. However, with our conceptual model we
+               find that there can be a significant delay in the tipping
+               because the system is attracted by the stable manifold of a
+               saddle during the rate-induced transition before escaping
+               towards the undesired state. This opens up the possibility for
+               an early warning of the impending abrupt transition via
+               detection of the changing linear stability in the vicinity of
+               the saddle. To do so, we propose estimating the Jacobian from
+               the noisy time series. This is shown to be a useful generic
+               precursor to detect rate-induced tipping.",
+  journal   = "Earth Syst. Dyn.",
+  publisher = "Copernicus GmbH",
+  volume    =  12,
+  number    =  3,
+  pages     = "819--835",
+  month     =  jul,
+  year      =  2021,
+  copyright = "https://creativecommons.org/licenses/by/4.0/",
+  language  = "en"
+}
+
+@ARTICLE{Stommel1961,
+  title     = "Thermohaline convection with two stable regimes of flow",
+  author    = "Stommel, Henry",
+  journal   = "Tellus",
+  publisher = "Stockholm University Press",
+  volume    =  13,
+  number    =  2,
+  pages     = "224--230",
+  month     =  may,
+  year      =  1961,
+  language  = "en"
+}
+
+@article{Koll2018,
+abstract = {Satellite measurements and radiative calculations show that Earth's outgoing longwave radiation (OLR) is an essentially linear function of surface temperature over a wide range of temperatures (≳60 K). Linearity implies that radiative forcing has the same impact in warmer as in colder climates and is thus of fundamental importance for understanding past and future climate change. Although the evidence for a nearly linear relation was first pointed out more than 50 y ago, it is still unclear why this relation is valid and when it breaks down. Here we present a simple semianalytical model that explains Earth's linear OLR as an emergent property of an atmosphere whose greenhouse effect is dominated by a condensable gas. Linearity arises from a competition between the surface's increasing thermal emission and the narrowing of spectral window regions with warming and breaks down at high temperatures once continuum absorption cuts off spectral windows. Our model provides a way of understanding the longwave contribution to Earth's climate sensitivity and suggests that extrasolar planets with other condensable greenhouse gases could have climate dynamics similar to Earth's.},
+author = {Koll, Daniel D. B. and Cronin, Timothy W.},
+doi = {10.1073/pnas.1809868115},
+issn = {0027-8424},
+journal = {Proceedings of the National Academy of Sciences},
+month = {oct},
+number = {41},
+pages = {10293--10298},
+pmid = {31308228},
+title = {{Earth's outgoing longwave radiation linear due to H 2 O greenhouse effect}},
+url = {http://www.pnas.org/lookup/doi/10.1073/pnas.1809868115},
+volume = {115},
+year = {2018}
+}
+
+@article{Soedergren2018,
+abstract = {We examine the effects of non-linear interactions between surface albedo, water vapor and cloud cover (referred to as climate variables) on amplified warming of the polar regions, using a new energy balance model. Our simulations show that the sum of the contributions to surface temperature changes due to any variable considered in isolation is smaller than the temperature changes from coupled feedback simulations. This non-linearity is strongest when all three climate variables are allowed to interact. Surface albedo appears to be the strongest driver of this non-linear behavior, followed by water vapor and clouds. This is because increases in longwave radiation absorbed by the surface, related to increases in water vapor and clouds, and increases in surface absorbed shortwave radiation caused by a decrease in surface albedo, amplify each other. Furthermore, our results corroborate previous findings that while increases in cloud cover and water vapor, along with the greenhouse effect itself, warm the polar regions, water vapor also significantly warms equatorial regions, which reduces polar amplification. Changes in surface albedo drive large changes in absorption of incoming shortwave radiation, thereby enhancing surface warming. Unlike high latitudes, surface albedo change at low latitudes are more constrained. Interactions between surface albedo, water vapor and clouds drive larger increases in temperatures in the polar regions compared to low latitudes. This is in spite of the fact that, due to a forcing, cloud cover increases at high latitudes and decreases in low latitudes, and that water vapor significantly enhances warming at low latitudes.},
+author = {S{\"{o}}dergren, A. Helena and McDonald, Adrian J. and Bodeker, Gregory E.},
+doi = {10.1007/s00382-017-3974-5},
+isbn = {0038201739},
+issn = {14320894},
+journal = {Climate Dynamics},
+keywords = {Climate feedback,Cloud feedback,Energy balance model,Polar amplification,Surface albedo feedback,Water vapor feedback},
+number = {5-6},
+pages = {1639--1658},
+publisher = {Springer Berlin Heidelberg},
+title = {{An energy balance model exploration of the impacts of interactions between surface albedo, cloud cover and water vapor on polar amplification}},
+url = {http://dx.doi.org/10.1007/s00382-017-3974-5},
+volume = {51},
+year = {2018}
+}
+
+@BOOK{Datseris2022,
+  title     = "Nonlinear dynamics",
+  author    = "Datseris, George and Parlitz, Ulrich",
+  publisher = "Springer Nature",
+  series    = "Undergraduate Lecture Notes in Physics",
+  edition   =  1,
+  month     =  mar,
+  year      =  2022,
+  address   = "Cham, Switzerland"
+}
