finish adding CTMLM

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -36,7 +36,7 @@ volume = {43},
 number = {24},
 pages = {12,614-12,623},
 keywords = {radiative forcing, methane},
-doi = {https://doi.org/10.1002/2016GL071930},
+doi = {10.1002/2016GL071930},
 url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1002/2016GL071930},
 eprint = {https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1002/2016GL071930},
 abstract = {Abstract New calculations of the radiative forcing (RF) are presented for the three main well-mixed greenhouse gases, methane, nitrous oxide, and carbon dioxide. Methane's RF is particularly impacted because of the inclusion of the shortwave forcing; the 1750–2011 RF is about 25\% higher (increasing from 0.48 W m−2 to 0.61 W m−2) compared to the value in the Intergovernmental Panel on Climate Change (IPCC) 2013 assessment; the 100 year global warming potential is 14\% higher than the IPCC value. We present new simplified expressions to calculate RF. Unlike previous expressions used by IPCC, the new ones include the overlap between CO2 and N2O; for N2O forcing, the CO2 overlap can be as important as the CH4 overlap. The 1750–2011 CO2 RF is within 1\% of IPCC's value but is about 10\% higher when CO2 amounts reach 2000 ppm, a value projected to be possible under the extended RCP8.5 scenario.},
@@ -387,4 +387,93 @@ year = {2018}
   month     =  mar,
   year      =  2022,
   address   = "Cham, Switzerland"
+}
+
+@article{Matsunobu2024,
+abstract = {Clear sky emittance models provide critical information for the determination of downwelling longwave irradiance at the Earth's surface. This study updates existing calculations which relate clear sky longwave emissivity with the main (and most variable) greenhouse gas in the atmosphere, water vapor. Impacts of station elevation and data quality control are quantified. Empirical results are used to validate highly resolved spectral models, and the resultant simplified calculates provide accurate estimations of clear sky emissivity without the need for extensive computation. Results show that correlation coefficients are mostly robust to nuanced data processing choices when regressed from sufficiently large data sets (≥104 samples) with the exceptions of altitude adjustment and measurement bias corrections. The empirical results from this study are compared to results from other leading empirical, physics-based, and hybridized phenomenological models. Correlations for effective clear sky emissivity, transmissivity and optical depth are provided, based on parameterized line-by-line (LBL) model results, for the broadband 0–2,500 cm−1 and for seven wavenumber wideband of interest. Results for the (b3) wideband 580–750 cm−1 are particularly relevant because of its disaggregated and combined carbon dioxide-water vapor contributions. The broadband effective optical depth ($\delta$) of water vapor is found to be (Formula presented.), where pw is the dimensionless partial pressure of water vapor at the surface. Equivalently, the broadband effective optical depth of carbon dioxide in the presence of water vapor is found to be (Formula presented.). Processed training data sets are provided as supplementary content for comparative studies.},
+author = {Matsunobu, L. M. and Coimbra, C. F.M.},
+doi = {10.1029/2023JD039798},
+issn = {21698996},
+journal = {Journal of Geophysical Research: Atmospheres},
+keywords = {clear sky,downwelling longwave,emissivity,optical depth,spectral wideband model},
+number = {7},
+title = {{On Effective Spectral Wideband Models for Clear Sky Atmospheric Emissivity and Transmissivity}},
+volume = {129},
+year = {2024}
+}
+@article{Datseris2025,
+author = {Datseris, George},
+doi = {xxx},
+journal = {xxx},
+number = {7},
+title = {{xxx}},
+volume = {1},
+year = {2025}
+}
+@article{Bretherton1997,
+abstract = {Decoupling during the "Lagrangian" evolution of a cloud-topped boundary layer advected equatorward by the trade winds in an idealized eastern subtropical ocean is studied using a mixed-layer model (MLM). The sea surface temperature is gradually warmed while the free tropospheric sounding remains unchanged, causing the boundary layer to deepen, the surface relative humidity to decrease, and surface latent heat fluxes to increase. Diurnally averaged insolation is used. For entrainment closures in which entrainment rate is related to a large-eddy convective velocity scale w*, the MLM predicts an increasingly prominent layer of negative buoyancy fluxes below cloud base as the sea surface temperature warms. Decoupling of the mixed layer can be inferred when the MLM-predicted negative buoyancy fluxes become too large for the internal circulations to sustain. The authors show that decoupling is mainly driven by an increasing ratio of the surface latent heat flux to the net radiative cooling in the cloud, and derive a decoupling criterion based on this ratio. Other effects such as drizzle, the vertical distribution of radiative cooling in the cloud, and sensible heat fluxes, also affect decoupling but are shown to be less important in typical subtropical boundary layers. A comparison of MLM results with a companion numerical study with a cloud-resolving model shows that the decoupling process is similar and the same decoupling criterion applies. A regional analysis of decoupling using Lagrangian trajectories based on summertime northeast Pacific climatology predicts decoupling throughout the subtropical stratocumulus region except in coastal zones where the boundary layer is under 750 m deep. A "flux-partitioning" entrainment closure, in which the entrainment rate is chosen to maintain a specified ratio of some measure of negative subcloud buoyancy fluxes to positive buoyancy fluxes within the cloud and near the surface, was also considered. By construction, such an MLM never predicts its own breakdown by decoupling. The changed entrainment closure had only a minor influence on the boundary layer evolution and entrainment rate. Instead, the crucial impact of the entrainment closure is on predicting when and where the mixed-layer assumption will break down due to decoupling.},
+author = {Bretherton, Christopher S. and Wyant, Matthew C.},
+doi = {10.1175/1520-0469(1997)054<0148:MTLTSA>2.0.CO;2},
+file = {:C\:/Users/gd419/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Bretherton, Wyant - 1997 - Moisture transport, lower-tropospheric stability, and decoupling of cloud-topped boundary layers.pdf:pdf},
+issn = {00224928},
+journal = {Journal of the Atmospheric Sciences},
+mendeley-groups = {Clouds & Circulation/Theory,Clouds & Circulation/SratoToCumulus},
+number = {1},
+pages = {148--167},
+title = {{Moisture transport, lower-tropospheric stability, and decoupling of cloud-topped boundary layers}},
+volume = {54},
+year = {1997}
+}
+@article{Stevens2006,
+abstract = {We review bulk representations of tropical and subtropical maritime atmospheric boundary layers. Three types of bulk representations are studied in detail: stratocumulus topped mixed layers, trade-wind layers, and sub-cloud mixed layers. Through the development of a consistent description of these disparate regimes, connections among their varied representations are emphasized, as well as their relation to regions of deeper convection. New results relating to the equilibrium mass flux and cloud fraction in the trade winds; the ability of bulk models to represent qualitatively major cloud regimes; and the relationship amongst different bulk representations of the surface layer are presented. Throughout we emphasize the identification of consistent and physically based mixing and cloud regime rules for use in intermediate complexity models of the tropical climate, which in turn can be used to study cloud and dynamical interactions on larger scales. {\textcopyright} Springer-Verlag 2006.},
+author = {Stevens, Bjorn},
+doi = {10.1007/s00162-006-0032-z},
+file = {:C\:/Users/gd419/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Stevens - 2006 - Bulk boundary-layer concepts for simplified models of tropical dynamics.pdf:pdf},
+issn = {09354964},
+journal = {Theoretical and Computational Fluid Dynamics},
+keywords = {Atmospheric boundary layer,Cumulus mass flux,Entrainment},
+mendeley-groups = {Clouds & Circulation/Theory,Clouds & Circulation/SratoToCumulus},
+number = {5-6},
+pages = {279--304},
+title = {{Bulk boundary-layer concepts for simplified models of tropical dynamics}},
+volume = {20},
+year = {2006}
+}
+@article{RandalSuarez1984,
+author = {Randall, David A. and Suarez, Max J.},
+doi = {10.1175/1520-0469(1984)041<3052:OTDOSF>2.0.CO;2},
+file = {:C\:/Users/gd419/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Randall, Suarez - 1984 - On the Dynamics of Stratocumulus Formation and Dissipation(2).pdf:pdf},
+issn = {0022-4928},
+journal = {Journal of the Atmospheric Sciences},
+mendeley-groups = {Clouds & Circulation/SratoToCumulus},
+month = {oct},
+number = {20},
+pages = {3052--3057},
+title = {{On the Dynamics of Stratocumulus Formation and Dissipation}},
+url = {http://journals.ametsoc.org/doi/10.1175/1520-0469(1984)041%3C3052:OTDOSF%3E2.0.CO;2},
+volume = {41},
+year = {1984}
+}
+@misc{Singer2023,
+author = {Singer, Clare E and Schneider, Tapio},
+doi = {10.22541/essoar.168167352.24863390/v1},
+file = {:C\:/Users/gd419/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Singer, Schneider - 2023 - Stratocumulus-cumulus transition explained by bulk boundary layer theory.pdf:pdf},
+institution = {Authorea, Inc.},
+mendeley-groups = {Clouds & Circulation/Multistability/Tipping,Clouds & Circulation/Theory,Clouds & Circulation/SratoToCumulus},
+month = {apr},
+title = {{Stratocumulus-cumulus transition explained by bulk boundary layer theory}},
+url = {https://essopenarchive.org/users/536265/articles/635004-stratocumulus-cumulus-transition-explained-by-bulk-boundary-layer-theory?commit=d2480eb44e4522d42863bcf9140f267cce824a42},
+year = {2023}
+}
+@misc{Singer2023a,
+abstract = {Stratocumulus clouds cover 20% of subtropical oceans and strongly cool the Earth by reflecting incoming shortwave radiation. Because of their small dynamical scales and their sensitivity to changing meteorological conditions, the response of stratocumulus clouds to climate change is one of the leading uncertainties in climate modeling. Recent work has made significant progress constraining this feedback using high-resolution large eddy simulations (LES) and satellite observations. Here we provide complementary constraints from a theoretical perspective, using a bulk boundary layer model to calculate the response of stratocumulus clouds to increasing CO 2. We extend the bulk model presented in Singer and Schneider (2023) by coupling it to a slab ocean to allow for feedbacks between cloud cover and surface warming and use ensemble Kalman inversion to calibrate model parameters. We conduct climate change experiments, forcing the bulk model with increasing CO 2 , and compare the cloud response to results from LES in Schneider et al. (2019). Past a critical CO 2 value, the cloud layer decouples from the surface, the clouds break up, and cloud fraction decreases to a shallow cumulus-like state. Cloud fraction shows hysteresis behavior, where the system remains in a low cloud fraction state even as CO 2 is decreased significantly past the breakup threshold. The hysteresis behavior is robust, but the critical CO 2 value is sensitive to parameters and assumptions of the bulk model. We show that surface warming and water vapor feedback are two important aspects of the breakup; without them, the critical CO 2 threshold for breakup is much larger. 5 SIGNIFICANCE STATEMENT: The purpose of this study, and the companion paper Singer and Schneider (2023), is to develop a simple model to explain mechanisms controlling stratocumulus-cumulus transitions. In this second paper, we describe the extended bulk model coupled to a slab ocean that is forced only with a prescribed CO 2 concentration. We calibrate key parameters of this model based on high-resolution simulations. The simple model, like the high-resolution simulations, shows that stratocumulus clouds break up at very high CO 2 concentrations and that the boundary layer exhibits hysteresis, remaining in a cumulus-like state until CO 2 is reduced significantly past the breakup threshold. We conclude by showing a series of mechanism-denial experiments that highlight the importance of surface temperature and water vapor feedbacks on the stratocumulus breakup.},
+author = {Singer, Clare E and Schneider, Tapio},
+doi = {10.22541/essoar.168167204.45220772/v1},
+file = {:C\:/Users/gd419/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Singer, Schneider - 2023 - CO 2-driven stratocumulus cloud breakup in a bulk boundary layer model.pdf:pdf},
+institution = {Authorea, Inc.},
+mendeley-groups = {Clouds & Circulation/Multistability/Tipping,Clouds & Circulation/Theory,Clouds & Circulation/SratoToCumulus},
+month = {apr},
+title = {{CO2-driven stratocumulus cloud breakup in a bulk boundary layer model}},
+url = {https://essopenarchive.org/users/536265/articles/635007-co2-driven-stratocumulus-cloud-breakup-in-a-bulk-boundary-layer-model?commit=3222e82bd286db5be70c8141004df041958316a3},
+year = {2023}
 }
