add reference to preprint

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -402,13 +402,13 @@ volume = {129},
 year = {2024}
 }
 @article{Datseris2025,
-author = {Datseris, George},
-doi = {xxx},
-journal = {xxx},
-number = {7},
-title = {{xxx}},
-volume = {1},
-year = {2025}
+  title = {Sensitivity of stratocumulus–cumulus transitions in a cloudy energy balance model},
+  url = {http://dx.doi.org/10.22541/essoar.174350018.87209330/v1},
+  DOI = {10.22541/essoar.174350018.87209330/v1},
+  publisher = {Authorea,  Inc.},
+  author = {Datseris,  George},
+  year = {2025},
+  month = apr
 }
 @article{Bretherton1997,
 abstract = {Decoupling during the "Lagrangian" evolution of a cloud-topped boundary layer advected equatorward by the trade winds in an idealized eastern subtropical ocean is studied using a mixed-layer model (MLM). The sea surface temperature is gradually warmed while the free tropospheric sounding remains unchanged, causing the boundary layer to deepen, the surface relative humidity to decrease, and surface latent heat fluxes to increase. Diurnally averaged insolation is used. For entrainment closures in which entrainment rate is related to a large-eddy convective velocity scale w*, the MLM predicts an increasingly prominent layer of negative buoyancy fluxes below cloud base as the sea surface temperature warms. Decoupling of the mixed layer can be inferred when the MLM-predicted negative buoyancy fluxes become too large for the internal circulations to sustain. The authors show that decoupling is mainly driven by an increasing ratio of the surface latent heat flux to the net radiative cooling in the cloud, and derive a decoupling criterion based on this ratio. Other effects such as drizzle, the vertical distribution of radiative cooling in the cloud, and sensible heat fluxes, also affect decoupling but are shown to be less important in typical subtropical boundary layers. A comparison of MLM results with a companion numerical study with a cloud-resolving model shows that the decoupling process is similar and the same decoupling criterion applies. A regional analysis of decoupling using Lagrangian trajectories based on summertime northeast Pacific climatology predicts decoupling throughout the subtropical stratocumulus region except in coastal zones where the boundary layer is under 750 m deep. A "flux-partitioning" entrainment closure, in which the entrainment rate is chosen to maintain a specified ratio of some measure of negative subcloud buoyancy fluxes to positive buoyancy fluxes within the cloud and near the surface, was also considered. By construction, such an MLM never predicts its own breakdown by decoupling. The changed entrainment closure had only a minor influence on the boundary layer evolution and entrainment rate. Instead, the crucial impact of the entrainment closure is on predicting when and where the mixed-layer assumption will break down due to decoupling.},
