--- a/docs/references.bib
+++ b/docs/references.bib
@@ -10,6 +10,21 @@ url = {http://doi.wiley.com/10.1029/RG019i001p00091},
 volume = {19},
 year = {1981}
 }
+@article{Stephens1978,
+author = {Stephens, G. L.},
+doi = {10.1175/1520-0469(1978)035<2123:RPIEWC>2.0.CO;2},
+file = {:C\:/Users/gd419/Downloads/atsc-1520-0469_1978_035_2123_rpiewc_2_0_co_2.pdf:pdf},
+issn = {0022-4928},
+journal = {Journal of the Atmospheric Sciences},
+mendeley-groups = {Clouds & Circulation/Optical Properties},
+month = {nov},
+number = {11},
+pages = {2123--2132},
+title = {{Radiation Profiles in Extended Water Clouds. II: Parameterization Schemes}},
+url = {http://journals.ametsoc.org/doi/10.1175/1520-0469(1978)035%3C2123:RPIEWC%3E2.0.CO;2},
+volume = {35},
+year = {1978}
+}
 
 @article{Bastiaansen2023,
 abstract = {Climate response metrics are used to quantify the Earth's climate response to anthropogenic changes of atmospheric CO2. Equilibrium climate sensitivity (ECS) is one such metric that measures the equilibrium response to CO2 doubling. However, both in their estimation and their usage, such metrics make assumptions on the linearity of climate response, although it is known that, especially for larger forcing levels, response can be nonlinear. Such nonlinear responses may become visible immediately in response to a larger perturbation, or may only become apparent after a long transient period. In this paper, we illustrate some potential problems and caveats when estimating ECS from transient simulations. We highlight ways that very slow time scales may lead to poor estimation of ECS even if there is seemingly good fit to linear response over moderate time scales. Moreover, such slow processes might lead to late abrupt responses (late tipping points) associated with a system's nonlinearities. We illustrate these ideas using simulations on a global energy balance model with dynamic albedo. We also discuss the implications for estimating ECS for global climate models, highlighting that it is likely to remain difficult to make definitive statements about the simulation times needed to reach an equilibrium.},
