LWP-dependent cloud albedo!

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -25,6 +25,36 @@ url = {http://journals.ametsoc.org/doi/10.1175/1520-0469(1978)035%3C2123:RPIEWC%
 volume = {35},
 year = {1978}
 }
+@article{Lacis1974,
+author = {Lacis, Andrew A. and Hansen, James},
+doi = {10.1175/1520-0469(1974)031<0118:APFTAO>2.0.CO;2},
+issn = {0022-4928},
+journal = {Journal of the Atmospheric Sciences},
+month = {jan},
+number = {1},
+pages = {118--133},
+title = {{A Parameterization for the Absorption of Solar Radiation in the Earth's Atmosphere}},
+url = {http://journals.ametsoc.org/doi/10.1175/1520-0469(1974)031%3C0118:APFTAO%3E2.0.CO;2},
+volume = {31},
+year = {1974}
+}
+
+@article{Datseris2021,
+abstract = {, 2018; Loeb et al., 2018) datasets provide precise measurements of Earth's radiant energy balance as seen from space. From these measurements it is possible to deduce the magnitude of Earth's planetary albedo,   0.29, which varies surprisingly little across years (Stevens & Schwartz, 2012). Remarkably, the measurements show that on long-time averages the two hemispheres have the same albedo, which we refer to as the hemispheric albedo symmetry (Bender et al.. In the simplest approximation this arises from the asymmetric distribution of clouds that counterbalances surface albedo asymmetries (Voigt et al., 2013). As pointed out by Stevens and Schwartz (2012) (see also the review by Stephens et al. (2015)), these properties of Earth's albedo lack even the outline of a theoretical explanation , yet are fundamental to an understanding of Earth's climate. Consider the possibilities: (a) the albedo symmetry is by chance and no mechanism enforces it. Then the two hemispheres are two different "reali-zations" of a planet with the same shortwave energy balance, and can be used to test how models capture circulation and cloudiness at the largest scales. This also means that, due to conservation of energy, cross equatorial heat transport must be balanced by the hemispheric asymmetry in outgoing longwave radiation, which would constrain inter-hemispheric temperature gradients, but how? Now if (b), the symmetry is not by chance, then we need to know the mechanisms behind it. There is a surprising scarcity of literature on the topic. Early theoretical studies of Earth's albedo mostly fo-cused on surface contributions to the planetary albedo, specifically the ice-albedo feedback first postulated by Arrhenius (1896). Work on this question flourished in the early 1970s, see Budyko (1969); Sellers (1969); North (1975); Ch{\'{y}}lek and Coakley (1975); Stone (1978) among others. These studies sought to understand how the surface albedo depends on, and in turn influences, the planetary temperature, but they did so by taking clouds for granted. In effect, they assumed that, despite being by far the dominant and most dynamic component of the planetary albedo (as later shown in pioneering work by Ramanathan, 1987), secular changes in cloudiness are negligible. The early work also assumed, albeit implicitly, hemispheric symmetry. Such an assumption seems natural, until one asks why clouds should vary between the hemispheres in a way that counterbalances a large, 6 Wm −2 , surface radiation asymmetry (see below), yet somehow be independent of a temporally changing climate state. Our work is motivated by the intellectual tension that arises from the assumed constancy of clouds over long timescales on one hand, and the fact that they compensate the surface albedo asymmetry to result in overall symmetric albedo on the other hand. We build upon earlier observational studies by Donohoe and Battisti (2011); Loeb et al. (2019), who decomposed the top of the atmosphere (TOA) albedo value and time-anomalies into a surface and atmosphere contribution, and by Voigt et al. (2013), who showed that the hemispheric albedo symmetry is neither a trivial property of the Earth system, nor reproduced by comprehensive Earth system models. By using the new cloud-information provided in the latest release of CERES, we are able to create a new measure of cloudiness that allows us to better understand how, and to what extent, cloud variations influence albedo variations. Our analysis is further aided by more sophisticated methods of time-series analysis, and a near doubling of the length of the observational record as compared to what was available to Voigt et al. (2013). This allows a more rigorous quantification of properties of Earth's albedo that models or theories should explain, and provides context for observations from an increasing number of studies of the albedo of other planets (Cowan & Agol, 2011; Mansfield et al., 2019; Shields et al., 2013), some of which also identify a role for clouds (Kreidberg et al., 2014). Our contributions are as follows. We first establish the margins of possible observable hemispheric differences as allowed by CERES data, which are 0.1  0.28 Wm −2. The margins include 0, confirming the conjecture of "symmetry" stated in existing literature. We further analyze radiation time-series in search of indicators of dynamical communication mechanisms that establish the symmetry between the two hemispheres. The overwhelming majority of temporal variability is associated with the seasonal cycle. Resid-uals of the seasonal cycle are found to be indistinguishable from noise and as such provide no sign of a symmetry-establishing mechanism operating on short (monthly) timescales. However, a long-term trend in the albedo is shown to be hemispherically symmetric, which we would not expect in the absence of a symmetry-establishing process, hinting the existence of one at longer timescales. We then construct a "cloudiness" field, representing physical cloud albedo, which is a better representation of clouds' impact on the shortwave part of the radiation balance than cloud fraction. Using this "cloudiness" we demonstrate},
+author = {Datseris, George and Stevens, Bjorn},
+doi = {10.1029/2021av000440},
+file = {:C\:/Users/gd419/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Datseris, Stevens - 2021 - Earth's Albedo and Its Symmetry.pdf:pdf},
+issn = {2576-604X},
+journal = {AGU Advances},
+mendeley-groups = {Albedo (Global) & Symmetry,Clouds & Circulation/Albedo/fraction},
+month = {sep},
+number = {3},
+publisher = {American Geophysical Union (AGU)},
+title = {{Earth's Albedo and Its Symmetry}},
+volume = {2},
+year = {2021}
+}
+
 
 @article{Bastiaansen2023,
 abstract = {Climate response metrics are used to quantify the Earth's climate response to anthropogenic changes of atmospheric CO2. Equilibrium climate sensitivity (ECS) is one such metric that measures the equilibrium response to CO2 doubling. However, both in their estimation and their usage, such metrics make assumptions on the linearity of climate response, although it is known that, especially for larger forcing levels, response can be nonlinear. Such nonlinear responses may become visible immediately in response to a larger perturbation, or may only become apparent after a long transient period. In this paper, we illustrate some potential problems and caveats when estimating ECS from transient simulations. We highlight ways that very slow time scales may lead to poor estimation of ECS even if there is seemingly good fit to linear response over moderate time scales. Moreover, such slow processes might lead to late abrupt responses (late tipping points) associated with a system's nonlinearities. We illustrate these ideas using simulations on a global energy balance model with dynamic albedo. We also discuss the implications for estimating ECS for global climate models, highlighting that it is likely to remain difficult to make definitive statements about the simulation times needed to reach an equilibrium.},
